# linkrusk

./: .gitignore  404.html  Cargo.toml  Dioxus.toml  README.md  index.html  package-lock.json  package.json
.github/workflows/: publish.yml
assets/: favicon-511f4fc4d2f8f557.svg.br  linkrusk-34846be25690a5ff.js  linkrusk-34846be25690a5ff.js.br  linkrusk-4a5d03e9171fe684.js  linkrusk-4a5d03e9171fe684.js.br  linkrusk-5c9125fa60be9b04.js  linkrusk-5c9125fa60be9b04.js.br  linkrusk-89aa7cd9ea34e447.js  linkrusk-89aa7cd9ea34e447.js.br  linkrusk-a1d35c021c4fcec7.js  linkrusk-a1d35c021c4fcec7.js.br  linkrusk-a92382cf054a2fab.js  linkrusk-a92382cf054a2fab.js.br  linkrusk-c072b837ab60e27d.js  linkrusk-c072b837ab60e27d.js.br  linkrusk_bg-0053b45c2421d3f8.wasm  linkrusk_bg-0053b45c2421d3f8.wasm.br  linkrusk_bg-1345535c790bc8ae.wasm  linkrusk_bg-1345535c790bc8ae.wasm.br  linkrusk_bg-380c103f1f47272c.wasm  linkrusk_bg-380c103f1f47272c.wasm.br  linkrusk_bg-606f5287fa35689b.wasm  linkrusk_bg-606f5287fa35689b.wasm.br  linkrusk_bg-849fe0ad850f6ce6.wasm  linkrusk_bg-849fe0ad850f6ce6.wasm.br  linkrusk_bg-9846e3ad2c5329d4.wasm  linkrusk_bg-9846e3ad2c5329d4.wasm.br  linkrusk_bg-d4d36bf518d1e3c0.wasm  linkrusk_bg-d4d36bf518d1e3c0.wasm.br  linkrusk_bg-e26a062669885775.wasm  linkrusk_bg-e26a062669885775.wasm.br  linkrusk_bg-f448c3f4ccd879c6.wasm  linkrusk_bg-f448c3f4ccd879c6.wasm.br  tailwind-686081b93a21574a.css  tailwind-686081b93a21574a.css.br  tailwind-8e1dc867c0d67027.css  tailwind-8e1dc867c0d67027.css.br  tailwind-e1ed6cd3d1b9ec0f.css  tailwind-e1ed6cd3d1b9ec0f.css.br  tailwind-e476966448a54225.css  (+2 more)
src/: create.rs  link.rs  list.rs  login.rs  main.rs  utils.rs
