[package]
name = "linkrusk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.41", default-features = false }
dioxus = { version = "0.6.0", features = ["router"] }
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", default-features = false, features = [
    "macros",
] }
web-sys = { version = "0.3.77", features = ["Window", "Storage"] }


[features]
default = ["web"]
web = ["dioxus/web"]
## We DO NOT support these platforms
# desktop = ["dioxus/desktop"]
# mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
